IT tests added. using testcontainers